--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,6 +34,10 @@ header > nav > ul > li {
     margin: 0 1.5rem;
 }
 
+header > nav > ul > li.button {
+
+}
+
 header > nav > ul > li > a {
   font-size: 1rem;
   text-decoration: none;
@@ -42,4 +46,13 @@ header > nav > ul > li > a {
 
 header > nav > ul > li > a.active {
   color: #7C4EE4;
+}
+
+header > nav > ul > li > a.button {
+  background-color: #7C4EE4;
+  color: #FFFFFF;
+  padding: 10px 20px;
+  border-radius: 8px;
+  height: 56px;
+  width: 180px;
 }
