--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 header {
@@ -62,6 +63,8 @@ header > nav > ul > li > a.button {
 
 .hero {
   background-image: url(../src/assets/bottom-vector.png), url(../src/assets/bottom-vector.png);
+  background-repeat: no-repeat, no-repeat;
+  background-position: top left, bottom right;
   background-color: #7C4EE4;
   color: #FFFFFF;
   font-family: "Raleway", serif;
@@ -98,5 +101,27 @@ header > nav > ul > li > a.button {
   border-radius: 8px;
   height: 56px;
   width: 180px;
+}
 
+.features {
+  width: 100%;
+  background-color: red;
+  padding: 7rem 4rem;
+}
+
+.features > .feature {
+}
+
+.features > .feature > .featured-img  {
+  width: 100%;
+  height: 576px;
+  overflow: hidden;
+  border-radius: 5px;
+  flex-shrink: 0;
+}
+
+.features > .feature > .featured-img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
