--- a/client/src/index.css
+++ b/client/src/index.css
@@ -175,4 +175,88 @@ header > nav > ul > li > a.button {
   width: 180px;
 }
 
+.latest {
+  font-family: "Raleway", serif;
+  height: 500px;
+  width: 100%;
+  padding: 7rem 4rem;
+}
+
+.latest > .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+}
+
+.latest > .header > a {
+  text-decoration: none;
+  background-color: #7C4EE4;
+  color: #FFFFFF;
+  padding: 10px 20px;
+  border-radius: 8px;
+  border: 2px solid #7C4EE4;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    "item1 item1 item1"
+    "item2 item3 item4";
+  grid-template-columns: repeat(3, 1fr); /* 3 equal columns */
+  gap: 10px; /* Adjust gap between grid items if needed */
+}
+
+.grid-item {
+  background-color: lightgray;
+  border: 1px solid #ccc;
+  /* padding: 20px;
+  text-align: center; */
+}
+
+.item1 {
+  grid-area: item1;
+  display: flex;
+  align-items: start;
+}
+
+.item1 > .item1-img {
+  width: 100%;
+  max-width: 712px;
+  height: 456px;
+  flex-shrink: 0;
+  /* border-radius: 1rem; */
+}
+
+.item1 > .item1-img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 1rem;
+}
+
+.item1 > .item1-content {
+  font-family: "Raleway", serif;
+  padding: 3rem;
+  border-radius: 1rem;
+}
+
+
+
+
+
+
+.item2 {
+  grid-area: item2;
+}
+
+.item3 {
+  grid-area: item3;
+}
+
+.item4 {
+  grid-area: item4;
+}
+
+
 
