--- a/client/src/index.css
+++ b/client/src/index.css
@@ -208,8 +208,8 @@ header > nav > ul > li > a.button {
 }
 
 .grid-item {
-  background-color: lightgray;
-  border: 1px solid #ccc;
+  /* background-color: lightgray;
+  border: 1px solid #ccc; */
   /* padding: 20px;
   text-align: center; */
 }
@@ -272,13 +272,61 @@ header > nav > ul > li > a.button {
   width: 180px;
 }
 
-
-
-
-
-
 .item2 {
   grid-area: item2;
+}
+
+.item2 > .item1-img {
+  width: 100%;
+  max-width: 400px;
+  height: 360px;
+  flex-shrink: 0;
+  /* border-radius: 1rem; */
+}
+
+.item2 > .item1-img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 1rem;
+}
+
+/*  */
+.item2 > .item1-content {
+  font-family: "Raleway", serif;
+  padding: 1.5rem 1rem;
+  border-radius: 1rem;
+}
+
+.item2 > .item1-content > .header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.5rem;
+}
+
+.item2 > .item1-content > .header > span {
+  color: #333333;
+  margin-left: 1rem;
+}
+
+.item2 > .item1-content > h2 {
+  margin-bottom: 1.5rem;
+
+}
+
+.item2 > .item1-content > p {
+  margin-bottom: 2rem;
+  line-height: 200%;
+}
+
+.item2 > .item1-content > a {
+  text-decoration: none;
+  color: #7C4EE4;
+  padding: 10px 20px;
+  border-radius: 8px;
+  border: 2px solid #7C4EE4;
+  height: 56px;
+  width: 180px;
 }
 
 .item3 {
