--- a/client/src/index.css
+++ b/client/src/index.css
@@ -177,7 +177,6 @@ header > nav > ul > li > a.button {
 
 .latest {
   font-family: "Raleway", serif;
-  height: 500px;
   width: 100%;
   padding: 7rem 4rem;
 }
@@ -198,14 +197,44 @@ header > nav > ul > li > a.button {
   border: 2px solid #7C4EE4;
 }
 
-.grid-container {
+/* .grid-container {
   display: grid;
   grid-template-areas:
     "item1 item1 item1"
     "item2 item3 item4";
-  grid-template-columns: repeat(3, 1fr); /* 3 equal columns */
-  gap: 2rem; /* Adjust gap between grid items if needed */
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+} */
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  /* background-color: red; */
+  gap: 2rem;
 }
+
+
+.grid-container .grid-item:nth-child(1){
+  grid-column: 1/13;
+  grid-row: 1;
+}
+
+.grid-container .grid-item:nth-child(2){
+  grid-column: 1/5;
+  grid-row: 2;
+}
+
+.grid-container .grid-item:nth-child(3){
+  grid-column: 5/9;
+  grid-row: 2;
+}
+
+.grid-container .grid-item:nth-child(4){
+  grid-column: 9/13;
+  grid-row: 2;
+}
+
+
 
 .grid-item {
   /* background-color: lightgray;
@@ -225,7 +254,6 @@ header > nav > ul > li > a.button {
   max-width: 712px;
   height: 456px;
   flex-shrink: 0;
-  /* border-radius: 1rem; */
 }
 
 .item1 > .item1-img > img {
@@ -272,16 +300,15 @@ header > nav > ul > li > a.button {
   width: 180px;
 }
 
-.item2 {
+/* .item2 {
   grid-area: item2;
-}
+} */
 
 .item2 > .item1-img {
   width: 100%;
   max-width: 400px;
   height: 360px;
   flex-shrink: 0;
-  /* border-radius: 1rem; */
 }
 
 .item2 > .item1-img > img {
@@ -291,7 +318,6 @@ header > nav > ul > li > a.button {
   border-radius: 1rem;
 }
 
-/*  */
 .item2 > .item1-content {
   font-family: "Raleway", serif;
   padding: 1.5rem 1rem;
@@ -329,13 +355,44 @@ header > nav > ul > li > a.button {
   width: 180px;
 }
 
-.item3 {
+/* .item3 {
   grid-area: item3;
 }
 
 .item4 {
   grid-area: item4;
+} */
+
+/* .projects {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 10px;
 }
+
+.projects img {
+  max-width: 100%;
+}
+
+.projects a {
+  text-align: center;
+  background: gray;
+  padding: 20px;
+}
+
+.projects a:nth-child(1){
+  grid-column: 1/12;
+  grid-row: 1;
+}
+
+.projects a:nth-child(2){
+  grid-column: 1/6;
+  grid-row: 2;
+}
+
+.projects a:nth-child(3){
+  grid-column: 7/12;
+  grid-row: 2;
+} */
 
 
 
