--- a/client/src/index.css
+++ b/client/src/index.css
@@ -413,5 +413,15 @@ header > nav > ul > li > a.button {
   border: 2px solid #7C4EE4;
 }
 
+.popular > .grid-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 10px;
+}
+
+.popular > .grid-container > div:nth-child(1) {
+  
+}
+
 
 
