--- a/client/src/index.css
+++ b/client/src/index.css
@@ -270,54 +270,56 @@ header > nav > ul > li > a.button:active::before{
   grid-row: 2;
 }
 
-
-/* .item1 {
-  display: flex;
-  align-items: start;
-} */
-
-.item1 > .item1-img {
+.grid-container .grid-item:nth-child(1).item > .item-img {
   width: 100%;
   max-width: 712px;
   height: 456px;
   flex-shrink: 0;
 }
 
-.item1 > .item1-img > img {
+.item > .item-img {
+  width: 100%;
+  max-width: 400px;
+  height: 360px;
+  flex-shrink: 0;
+  margin-bottom: 1.5rem;
+}
+
+.item > .item-img > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 1rem;
 }
 
-.item1 > .item1-content {
+.grid-container .grid-item:nth-child(1).item > .item-content {
   font-family: "Raleway", serif;
   padding: 3rem;
   border-radius: 1rem;
 }
 
-.item1 > .item1-content > .header {
+.item > .item-content > .header {
   display: flex;
   align-items: center;
   margin-bottom: 2rem;
 }
 
-.item1 > .item1-content > .header > span {
+.item > .item-content > .header > span {
   color: #333333;
   margin-left: 1rem;
 }
 
-.item1 > .item1-content > h2 {
+.item > .item-content > h2 {
   margin-bottom: 2rem;
 
 }
 
-.item1 > .item1-content > p {
+.item > .item-content > p {
   margin-bottom: 2rem;
   line-height: 200%;
 }
 
-.item1 > .item1-content > a {
+.grid-container .grid-item:nth-child(1).item > .item-content > a {
   text-decoration: none;
   color: #7C4EE4;
   padding: 10px 20px;
@@ -327,70 +329,11 @@ header > nav > ul > li > a.button:active::before{
   width: 180px;
 }
 
-/* .item2 {
-  grid-area: item2;
-} */
-
-.item2 > .item1-img {
-  width: 100%;
-  max-width: 400px;
-  height: 360px;
-  flex-shrink: 0;
-}
-
-.item2 > .item1-img > img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 1rem;
-}
-
-.item2 > .item1-content {
-  font-family: "Raleway", serif;
-  padding: 1.5rem 0;
-  border-radius: 1rem;
-}
-
-.item2 > .item1-content > .header {
-  display: flex;
-  align-items: center;
-  margin-bottom: 1.5rem;
-}
-
-.item2 > .item1-content > .header > span {
-  color: #333333;
-  margin-left: 1rem;
-}
-
-.item2 > .item1-content > h2 {
-  margin-bottom: 1.5rem;
-
-}
-
-.item2 > .item1-content > p {
-  margin-bottom: 2rem;
-  line-height: 200%;
-}
-
-
-
-.item2 > .item1-content > a {
+.item > .item-content > a {
   text-decoration: underline;
   color: #7C4EE4;
-  /* padding: 10px 20px;
-  border-radius: 8px;
-  border: 2px solid #7C4EE4;
-  height: 56px;
-  width: 180px; */
 }
 
-/* .item3 {
-  grid-area: item3;
-}
-
-.item4 {
-  grid-area: item4;
-} */
 
 /* .projects {
   display: grid;
