--- a/client/src/index.css
+++ b/client/src/index.css
@@ -357,7 +357,7 @@ header > nav > ul > li > a.button:active::before{
 
 .popular > .grid-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, auto));
+  grid-template-columns: repeat(auto-fit, minmax(400px, auto));
   gap: 1.5rem;
 }
 
@@ -374,14 +374,37 @@ footer > .footer-one {
   background-color: #7C4EE4;
   font-family: "Raleway", serif;
   line-height: 200%;
+  padding: 2rem 0;
 }
 
+/* footer > .footer-one > h2 {
+  margin: 4rem 0;
+}
+
+footer > .footer-one > p {
+  margin: 4rem 0;
+
+} */
+
+footer > .footer-one > div {
+  margin: 2rem 0;
+}
 footer > .footer-one > div > input {
   font-family: "Raleway", serif;
+  height: 56px;
+  padding: 1.5rem;
+}
+footer > .footer-one > div > button {
+  font-family: "Raleway", serif;
+  height: 56px;
 }
 
 @media screen and (max-width: 900px) {
   .hero {
+    padding: 3rem 1.5rem;
+  }
+
+  .popular {
     padding: 3rem 1.5rem;
   }
 }
